--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="main_title">MINI DOGS</string>
     <string name="main_play">PLAY</string>
     <string name="main_about">ABOUT</string>
+    <string name="main_highscore">HIGHSCORE</string>
     <string name="privacy">https://lwestling.github.io/minidogs_privacy_policy.html</string>
 
     <string name="about_text">
@@ -24,4 +25,14 @@
         \n\nTree - <a href="https://opengameart.org/content/low-poly-tree-1">Available Here</a>
     </string>
     <string name="about_back">BACK TO MAIN MENU</string>
+
+    <string name="app_id">152400652037</string>
+
+    <!-- Sign in -->
+    <string name="sign_in_error">Error signing in, try again later.</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="not_signed_in">This features requires signing in to google play games.</string>
+
+    <!-- leaderboard -->
+    <string name="leaderboard_id">CgkIhc6l3rcEEAIQAQ</string>
 </resources>
