--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="main_title">MINI DOGS</string>
     <string name="main_play">PLAY</string>
     <string name="main_about">ABOUT</string>
-    <string name="main_highscore">HIGHSCORE</string>
+    <string name="main_highscore">HIGHSCORES</string>
     <string name="privacy">https://lwestling.github.io/minidogs_privacy_policy.html</string>
 
     <string name="about_text">
