--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
         <a href="http://EricSkiff.com/music">Available Here</a>
         \n\nHit sound by: LittleRobotSoundFactory -
         <a href="https://freesound.org/people/LittleRobotSoundFactory/sounds/270325/">Available Here</a>
-        \n\nTree - <a href="https://opengameart.org/content/low-poly-tree-1">Available Here</a>
+        \n\nTree - <a href="https://www.turbosquid.com/3d-models/free-tree-3d-model/941297">Available Here</a>
     </string>
     <string name="about_back">BACK TO MAIN MENU</string>
 
